Ilya_Bombel/13.Kubernetes.Helm/wp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "wp.k8s-10.sa"
spec:
  rules:
    - host: wp.k8s-9.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ib-wordpress
                port:
                  number: 80
